@@ -16,6 +16,7 @@
 
 package com.badlogic.gwtref.client;
 
+import java.lang.annotation.Annotation;
 import java.util.Arrays;
 
 /** Describes a method of a {@link Type}.
@@ -38,10 +39,11 @@ public class Method {
 	final boolean isConstructor;
 	final Parameter[] parameters;
 	final int methodId;
-
+	final Annotation[] annotations;
+	
 	public Method (String name, Class enclosingType, Class returnType, Parameter[] parameters, boolean isAbstract,
 		boolean isFinal, boolean isStatic, boolean isDefaultAccess, boolean isPrivate, boolean isProtected, boolean isPublic,
-		boolean isNative, boolean isVarArgs, boolean isMethod, boolean isConstructor, int methodId) {
+		boolean isNative, boolean isVarArgs, boolean isMethod, boolean isConstructor, int methodId, Annotation[] annotations) {
 		this.name = name;
 		this.enclosingType = new CachedTypeLookup(enclosingType);
 		this.parameters = parameters != null ? parameters : EMPTY_PARAMS;
@@ -58,6 +60,7 @@ public class Method {
 		this.isMethod = isMethod;
 		this.isConstructor = isConstructor;
 		this.methodId = methodId;
+		this.annotations = annotations;
 	}
 
 	/** @return the {@link Class} of the enclosing type. */
@@ -122,6 +125,10 @@ public class Method {
 
 	public boolean isConstructor () {
 		return isConstructor;
+	}
+	
+	public Annotation[] getDeclaredAnnotations () {
+		return annotations;
 	}
 
 	/** Invokes the method on the given object. Ignores the object if this is a static method. Throws an IllegalArgumentException if
